# aianonymous

./: .gitignore  CMakeLists.txt  aianonymous.c
cmake/: FindCheck.cmake
src/aiagp/: CMakeLists.txt  gp.c  gp.h
src/aiakernel/: CMakeLists.txt  kernel.c  kernel.h
src/aianash/: CMakeLists.txt  README.md  README.md.html  behaviour.c  behaviour.h
src/aianon/: AIASettings.cmake.in  AIATensor.c  CMakeLists.txt  aianon.h  config.h.in  storage.c  storage.h  tensor.c  tensor.h  util.h
src/aianon-optim/: CMakeLists.txt  adagrad.c  cg.c  optim.h  sgd.c
src/aianon/cmake/: FindLAPACK.cmake
src/aianon/core/: CMakeLists.txt  erasure.h  tensor.c  tensor.h  util.h
src/aianon/core/math/: CMakeLists.txt  blas.c  blas.h  lapack.c  lapack.h
src/aianon/core/util/: CMakeLists.txt  array.c  array.h  check.c  check.h  memory.c
src/aianon/math/: CMakeLists.txt  blas.c  blas.h  lapack.c  lapack.h  tensormath.c  tensormath.h
src/aianon/ml/: CMakeLists.txt
src/aianon/ml/gp/: CMakeLists.txt  gp.c  gp.h
src/aianon/ml/kernel/: CMakeLists.txt  kernel.c  kernel.h
src/aianon/random/: CMakeLists.txt  generator.c  sample.c  sample.h
src/aianon/tensor/: CMakeLists.txt  apply.h  diagmath.c  diagmath.h  dimapply.h  dimcrossapply.h  linalg.c  linalg.h  math.c  math.h  random.c  random.h  storage.c  storage.h  tensor.c  tensor.h
src/aianon/util/: CMakeLists.txt  check.c  erasure.h  memory.c  memory.h
src/aiaoptim/: CMakeLists.txt  adagrad.c  cg.c  linesearch.c  optim.h  sgd.c
src/aiarandom/: CMakeLists.txt  generator.c  generator.h  random.c  random.h  sample.c  sample.h
src/aiatensor/: CMakeLists.txt  blas.c  blas.h  diagmath.c  diagmath.h  dimcrossapply.h  functional.h  lapack.c  lapack.h  linalg.c  linalg.h  math.c  math.h  storage.c  storage.h  tensor.c  tensor.h  types.h
src/aiatensor/cmake/: FindBLAS.cmake
src/aiatensor/internal/: CMakeLists.txt
src/aiatensor/tensor/: CMakeLists.txt  dimcrossapply.h  linalg.c  storage.h
src/aiautil/: CMakeLists.txt  array.c  array.h  bits.h  check.c  math.h  memory.c  memory.h  util.h
tests/: CMakeLists.txt  check_aia.c  check_aia.h  check_aiagp.c  check_aiakernel.c  check_aianon-gp.c  check_aianon-kernel.c  check_aianon-math.c  check_aianon-math.h  check_aianon-math_tensor.c  check_aianon-math_tensorlinalg.c  check_aianon-math_tensormath.c  check_aiaoptim.c  check_aiaoptim_cg.c  check_aiatensor.c  check_aiatensor_functional.c  check_aiatensor_linalg.c  check_aiatensor_math.c  check_tensor.c  sample_tensors.c  sample_tensors.h
tests/cmake/: config.h.in
